# SubForge

./: .gitignore  404.html  CNAME  Cargo.toml  Dockerfile  README.md  faq.html  hashmap.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  quick-start.html  subforge.example.toml
.github/workflows/: docs-site-sync.yml  p8_7_ci.yml  release_ci.yml  release_publish.yml
api/: overview.html
apps/core/: Cargo.toml
apps/core/src/: bootstrap.rs  cli.rs  main.rs  security.rs  settings_seed.rs  tests.rs
apps/core/src/config/: loaded.rs  mod.rs  utils.rs  validation.rs
apps/core/src/headless/: apply.rs  discovery.rs  mod.rs  test_helpers.rs  token.rs  validate.rs
apps/core/src/tests/: config.rs  headless_runtime.rs
apps/core/tests/: listen_warning_process.rs
apps/desktop/: index.html  package.json  tsconfig.app.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx  router.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/desktop/: commands.rs  core_manager.rs  core_manager_api.rs  core_manager_events.rs  helpers.rs  mod.rs  types.rs  window_lifecycle.rs
apps/desktop/src/components/: inline-action-feedback.tsx  placeholder-page.tsx  skeleton.tsx  state-panel.tsx  status-indicator.tsx  toast-host.tsx
apps/desktop/src/features/dashboard/: page.tsx
apps/desktop/src/features/plugins/: page.tsx
apps/desktop/src/features/runs/: page.tsx  (+1 more)
apps/desktop/src/lib/: api.ts  query-cache.ts  query-keys.ts
apps/desktop/src/providers/: core-connection-provider.tsx
apps/desktop/src/stores/: core-ui-store.ts
apps/desktop/src/types/: core.ts
assets/: api_overview.md.C_dU6XhX.js  api_overview.md.C_dU6XhX.lean.js  app.Be4eyiEU.js  deploy_headless.md.BJPzvvaG.js  deploy_headless.md.BJPzvvaG.lean.js  deploy_release-artifacts.md.DEjnj7Vw.js  deploy_release-artifacts.md.DEjnj7Vw.lean.js  faq.md.DeI236rF.js  faq.md.DeI236rF.lean.js  guide_architecture.md.DbWUMm80.js  guide_architecture.md.DbWUMm80.lean.js  guide_configuration.md.C9gtthlI.js  guide_configuration.md.C9gtthlI.lean.js  guide_security.md.DzO60gYw.js  guide_security.md.DzO60gYw.lean.js  index.md.BCawDo3Z.js  plugins_overview.md.DwvIlHXu.js  plugins_overview.md.DwvIlHXu.lean.js  plugins_script.md.B10-A-2Y.js  plugins_script.md.B10-A-2Y.lean.js  plugins_static.md.Bvm24Edt.js  plugins_static.md.Bvm24Edt.lean.js  quick-start.md.Be2ohBvB.js  quick-start.md.Be2ohBvB.lean.js  style.7YnQB3fx.css
assets/chunks/: theme.DBtAk3WF.js
crates/app-aggregator/: Cargo.toml
crates/app-aggregator/src/: lib.rs
crates/app-common/: Cargo.toml
crates/app-common/src/: error.rs  lib.rs  models.rs  plugin.rs  tests.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: engine.rs  fetcher.rs  lib.rs  parser.rs  script_executor.rs  source_service.rs  utils.rs
crates/app-core/src/fetcher/: content_decode.rs  request_guard.rs  routing_template.rs  routing_template_clash.rs  routing_template_singbox.rs  routing_template_utils.rs
crates/app-core/src/parser/: anytls.rs  common.rs  hysteria2.rs  mod.rs  trojan.rs  tuic.rs  vless.rs  vmess.rs
crates/app-core/src/script_executor/: errors.rs  mod.rs  paths.rs  pipeline.rs  state.rs
crates/app-core/src/source_service/: mod.rs  ops.rs  secrets.rs  validation.rs
crates/app-core/src/tests/: engine.rs  fetcher.rs  mod.rs  parser.rs  shared.rs  source_service.rs
crates/app-core/tests/fixtures/: subscription_base64.txt
crates/app-http-server/: Cargo.toml
crates/app-http-server/src/: handlers.rs  helpers.rs  lib.rs  middleware.rs  state.rs  tests.rs
crates/app-http-server/src/handlers/: logs.rs  mod.rs  plugins.rs  profiles.rs  settings.rs  sources.rs
crates/app-http-server/src/handlers/profiles/: export.rs  mod.rs  read.rs  tokens.rs  write.rs
crates/app-http-server/src/state/: security_limits.rs
crates/app-http-server/src/tests/: auth.rs  e2e.rs  helpers_sanitization.rs  mod.rs
crates/app-plugin-runtime/: Cargo.toml
crates/app-plugin-runtime/src/: error.rs  lib.rs  loader.rs  lua_sandbox.rs  tests.rs
crates/app-plugin-runtime/src/lua_sandbox/: error_map.rs  runtime_apis.rs  tests.rs
crates/app-plugin-runtime/src/lua_sandbox/runtime_apis/: mod.rs
crates/app-plugin-runtime/src/lua_sandbox/runtime_apis/http_api/: cookies.rs  headers.rs  mod.rs  runtime.rs  target_guard.rs
crates/app-secrets/: Cargo.toml
crates/app-secrets/src/: lib.rs
crates/app-storage/: Cargo.toml
crates/app-storage/src/: db.rs  error.rs  lib.rs  mappers.rs  models.rs  tests.rs
crates/app-storage/src/repositories/: export_token_repo.rs  mod.rs  node_cache_repo.rs  plugin_repo.rs  profile_repo.rs  refresh_job_repo.rs  settings_repo.rs  source_config_repo.rs  source_repo.rs
crates/app-storage/src/tests/: repositories_runtime.rs
crates/app-transform/: Cargo.toml
crates/app-transform/src/: base64.rs  lib.rs  singbox.rs  singbox_outbound.rs  singbox_template_utils.rs
crates/app-transform/src/clash/: group_utils.rs  mod.rs  proxy.rs
crates/app-transform/src/fixtures/: clash_vless.yaml  clash_vmess.yaml  singbox_hysteria2.json  singbox_ss.json  singbox_trojan.json  singbox_tuic.json  singbox_vless.json  singbox_vmess.json
crates/app-transform/src/tests/: mod.rs
crates/app-transport/: Cargo.toml
crates/app-transport/src/: error.rs  lib.rs  profiles.rs  tests.rs
deploy/: headless.html  release-artifacts.html
docs/: faq.md  index.md  quick-start.md
docs/.vitepress/: config.mts
docs/api/: overview.md
docs/deploy/: headless.md
docs/guide/: architecture.md  configuration.md  security.md
docs/plugins/: overview.md  script.md  static.md
guide/: architecture.html  configuration.html  security.html
migrations/: V001__init_tables.sql
plugins/: overview.html  script.html  static.html
plugins/builtins/static/: plugin.json  schema.json
plugins/examples/script-mock/: plugin.json  schema.json
plugins/examples/script-mock/scripts/: fetch.lua  login.lua  refresh.lua
scripts/: p8_7_gate_check.ps1  release_gate_check.ps1
(+15 files in other folders)
