[workspace]
members = [
  "apps/core",
  "apps/desktop/src-tauri",
  "crates/app-common",
  "crates/app-core",
  "crates/app-storage",
  "crates/app-secrets",
  "crates/app-plugin-runtime",
  "crates/app-transport",
  "crates/app-aggregator",
  "crates/app-transform",
  "crates/app-http-server",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
rust-version = "1.85"
publish = false

[workspace.dependencies]
aes-gcm = "^0.10"
anyhow = "^1.0"
argon2 = "^0.5"
axum = "^0.8"
base64 = "^0.22"
brotli = "^7.0"
clap = { version = "^4.6", features = ["derive"] }
flate2 = "^1.1"
fs2 = "^0.4"
getrandom = "^0.3"
keyring = "^3.6"
rand = "^0.9"
regex = "^1.11"
reqwest = { version = "^0.13", features = ["json"] }
refinery = { version = "^0.9", features = ["rusqlite"] }
rusqlite = { version = "^0.37", features = ["bundled"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^2.0"
tokio = { version = "^1.50", features = ["macros", "rt-multi-thread", "signal", "net", "sync"] }
tracing = "^0.1"
tracing-appender = "^0.2"
tracing-subscriber = { version = "^0.3", features = ["fmt"] }
time = { version = "^0.3", features = ["formatting"] }
zeroize = "^1.8"
