[package]
name = "subforge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
clap.workspace = true
fs2.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
time.workspace = true
app-common = { path = "../../crates/app-common" }
app-storage = { path = "../../crates/app-storage" }
app-secrets = { path = "../../crates/app-secrets" }
app-http-server = { path = "../../crates/app-http-server" }
app-core = { path = "../../crates/app-core" }
toml = "^0.9"
rusqlite.workspace = true
