[package]
name = "app-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
app-common = { path = "../app-common" }
app-plugin-runtime = { path = "../app-plugin-runtime" }
app-secrets = { path = "../app-secrets" }
app-storage = { path = "../app-storage" }
app-transport = { path = "../app-transport" }
base64.workspace = true
brotli.workspace = true
flate2.workspace = true
getrandom.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "^0.9"
thiserror.workspace = true
time.workspace = true
tokio.workspace = true

[dev-dependencies]
axum.workspace = true
