[package]
name = "app-http-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
app-common = { path = "../app-common" }
app-aggregator = { path = "../app-aggregator" }
app-core = { path = "../app-core" }
app-plugin-runtime = { path = "../app-plugin-runtime" }
app-secrets = { path = "../app-secrets" }
app-storage = { path = "../app-storage" }
app-transform = { path = "../app-transform" }
axum = { workspace = true, features = ["multipart"] }
base64.workspace = true
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream = { version = "^0.1", features = ["sync"] }
zip = "^2.2"
tempfile = "^3.13"
rusqlite.workspace = true

[dev-dependencies]
tower = { version = "^0.5", features = ["util"] }
