[package]
name = "app-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
app-common = { path = "../app-common" }
refinery.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true
