[package]
name = "subforge-desktop-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[package.metadata]

[build-dependencies]
tauri-build = { version = "^2.1" }

[dependencies]
anyhow.workspace = true
base64.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "^2.10" }
tokio.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "^0.30", features = ["signal"] }
